--- a/IIFYM/build.gradle
+++ b/IIFYM/build.gradle
@@ -43,16 +43,18 @@ dependencies {
     compile 'com.androidadvance:topsnackbar:1.1.1'
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+
     // MOBILE
-/*    compile 'com.google.firebase:firebase-auth:10.2.0'
-    compile 'com.google.firebase:firebase-database:10.2.0'
-    compile 'com.google.android.gms:play-services:10.2.0'*/
+    compile 'com.google.firebase:firebase-auth:10.2.4'
+    compile 'com.google.firebase:firebase-database:10.2.4'
+    compile 'com.google.android.gms:play-services-auth:10.2.4'
     // EMULATOR
-    compile 'com.google.firebase:firebase-auth:9.6.0'
+/*    compile 'com.google.firebase:firebase-auth:9.6.0'
     compile 'com.google.firebase:firebase-database:9.6.0'
-    compile 'com.google.android.gms:play-services:9.6.0'
+    compile 'com.google.android.gms:play-services:9.6.0'*/
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
