--- a/IIFYM/build.gradle
+++ b/IIFYM/build.gradle
@@ -32,14 +32,9 @@ dependencies {
     compile('com.github.worker8:tourguide:1.0.17-SNAPSHOT@aar') {
         transitive = true
     }
-    compile project(':ProgressBar')
-    // MOBILE
-/*    compile 'com.google.firebase:firebase-auth:10.2.0'
-    compile 'com.google.firebase:firebase-database:10.2.0'
-    compile 'com.google.android.gms:play-services:10.2.0'*/
-    // EMULATOR
     compile 'com.github.clans:fab:1.6.4'
     compile 'co.infinum:materialdatetimepicker-support:3.1.3'
+    compile project(':ProgressBar')
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
@@ -48,11 +43,18 @@ dependencies {
     compile 'com.androidadvance:topsnackbar:1.1.1'
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    // MOBILE
+//    compile 'com.google.firebase:firebase-auth:10.2.4'
+//    compile 'com.google.firebase:firebase-database:10.2.4'
+//    compile 'com.google.android.gms:play-services-auth:10.2.4'
+    // EMULATOR
     compile 'com.google.firebase:firebase-auth:9.6.0'
     compile 'com.google.firebase:firebase-database:9.6.0'
     compile 'com.google.android.gms:play-services:9.6.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
