--- a/IIFYM/src/main/AndroidManifest.xml
+++ b/IIFYM/src/main/AndroidManifest.xml
@@ -13,68 +13,54 @@
         android:label="@string/appName"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".Activities.Main.activityHome"
             android:label="@string/appName"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".Activities.Main.activityFoodManager"
             android:label="@string/toolbarTapOnAnItemToEdit" />
-
         <activity
             android:name=".Activities.Main.activityEditFood"
             android:label="@string/toolbarEditFood" />
-
         <activity
             android:name=".Activities.Main.activityCreateFood"
             android:label="@string/toolbarCreateNewFood" />
-
         <activity
             android:name=".Activities.UserLoginAuthentication.activityLogin"
             android:label="@string/appName" />
-
         <activity
             android:name=".Activities.UserLoginAuthentication.activityRegisterProfile"
             android:label="@string/toolbarUserInfo" />
-
         <activity
             android:name=".Activities.UserLoginAuthentication.activityRegisterGoals"
             android:label="@string/toolbarUserMacros" />
-
         <activity
             android:name=".Activities.Main.activityAddDailyItem"
             android:label="@string/toolbarAddDailyItem" />
-
         <activity
             android:name=".Activities.UserLoginAuthentication.activityLauncher"
             android:label="IIFYM">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Activities.Main.activitySelectDailyItem"
             android:label="@string/toolbarSelectItemToAdd" />
-
-        <activity
-            android:name=".Activities.Main.activityViewDailyItem"/>
-
+        <activity android:name=".Activities.Main.activityViewDailyItem" />
         <activity
             android:name=".Activities.Settings.activitySettings"
-            android:label="Settings"/>
-
+            android:label="Settings" />
         <activity
             android:name=".Activities.Main.activityCreateMeal"
             android:label="@string/toolbarCreateNewMeal" />
-
-        <activity
-            android:name=".Activities.Main.activtitySelectMealIngredients"/>
-
+        <activity android:name=".Activities.Main.activtitySelectMealIngredients" />
+        <activity android:name=".Activities.Misc.activityAbout"
+            android:label="About" />
     </application>
 
 </manifest>
