--- a/IIFYM/build.gradle
+++ b/IIFYM/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     // MOBILE
     compile 'com.google.firebase:firebase-auth:10.2.6'
     compile 'com.google.firebase:firebase-database:10.2.6'
-    compile 'com.google.android.gms:play-services:10.2.6'
+    compile 'com.google.android.gms:play-services-auth:10.2.6'
     compile 'com.github.clans:fab:1.6.4'
     compile 'co.infinum:materialdatetimepicker-support:3.1.3'
     compile 'com.android.support:appcompat-v7:25.1.3'
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services:10.2.6'
 }
 
 apply plugin: 'com.google.gms.google-services'
